[#127] Create bulk_insert() in Adapters
[#132] Fix bug in create_field_index() method
[das-query-engine#223] Update log messages
[#129] Create a new adapter called PostgresLobeDB
[das-query-engine#214] Add retrieve_all_atoms method
[#124] Changed count_atoms() to return more accurate numbers
[das-query-engine#197] Changed get_all_links() to return a tuple
[#142] Changed add_link() and add_node() to work with get_atom returns