@@ -6,3 +6,4 @@
 [#124] Changed count_atoms() to return more accurate numbers
 [das-query-engine#197] Changed get_all_links() to return a tuple
 [#142] Changed add_link() and add_node() to work with get_atom returns
+[das-query-engine#114] Changed commit() to receive buffer as a kwargs parameter
